ANTLR/sources/GDLParser.py
# Generated from ../antlrInput/GDL.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO



class GDLParser ( Parser ):

    grammarFileName = "GDL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'Graph'", "'{'", "'}'", "'layout'", "':'", 
                     "'dot'", "'neato'", "'twopi'", "'circo'", "'fdp'", 
                     "'sfdp'", "';'", "'saveAs'", "'png'", "'jpg'", "'title'", 
                     "'background'", "'='", "'['", "']'", "','", "'('", 
                     "')'", "'->'", "'<-'", "'-'", "'clr'", "'Red'", "'Green'", 
                     "'Blue'", "'Gray'", "'Yellow'", "'Black'", "'White'", 
                     "'Pink'", "'Cyan'", "'vertexClr'", "'edgeClr'", "'fontClr'", 
                     "'place'", "'Left'", "'Right'", "'Up'", "'Down'", "'U-L'", 
                     "'U-R'", "'D-L'", "'D-R'", "'Center'", "'edgeThick'", 
                     "'fontSize'", "'vertexSize'", "'font'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "INTEGER", "TEXT", "EXTENDETTEXT", 
                      "SPACE", "COMMENT", "LINE_COMMENT" ]

    RULE_program = 0
    RULE_graph = 1
    RULE_layout = 2
    RULE_saveformat = 3
    RULE_graphtitle = 4
    RULE_background = 5
    RULE_content = 6
    RULE_edge = 7
    RULE_edgeopt = 8
    RULE_edgeoptparams = 9
    RULE_vertex = 10
    RULE_value = 11
    RULE_attitude = 12
    RULE_vertexopt = 13
    RULE_vertexoptparams = 14
    RULE_clr = 15
    RULE_vertexclr = 16
    RULE_edgeclr = 17
    RULE_fontclr = 18
    RULE_placement = 19
    RULE_edgethickness = 20
    RULE_fontsize = 21
    RULE_vertexsize = 22
    RULE_font = 23

    ruleNames =  [ "program", "graph", "layout", "saveformat", "graphtitle", 
                   "background", "content", "edge", "edgeopt", "edgeoptparams", 
                   "vertex", "value", "attitude", "vertexopt", "vertexoptparams", 
                   "clr", "vertexclr", "edgeclr", "fontclr", "placement", 
                   "edgethickness", "fontsize", "vertexsize", "font" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    INTEGER=54
    TEXT=55
    EXTENDETTEXT=56
    SPACE=57
    COMMENT=58
    LINE_COMMENT=59

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(GDLParser.EOF, 0)

        def graph(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GDLParser.GraphContext)
            else:
                return self.getTypedRuleContext(GDLParser.GraphContext,i)


        def getRuleIndex(self):
            return GDLParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = GDLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 48
                self.graph()
                self.state = 51 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==GDLParser.T__0):
                    break

            self.state = 53
            self.match(GDLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GraphContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def content(self):
            return self.getTypedRuleContext(GDLParser.ContentContext,0)


        def graphtitle(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GDLParser.GraphtitleContext)
            else:
                return self.getTypedRuleContext(GDLParser.GraphtitleContext,i)


        def layout(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GDLParser.LayoutContext)
            else:
                return self.getTypedRuleContext(GDLParser.LayoutContext,i)


        def background(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GDLParser.BackgroundContext)
            else:
                return self.getTypedRuleContext(GDLParser.BackgroundContext,i)


        def saveformat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GDLParser.SaveformatContext)
            else:
                return self.getTypedRuleContext(GDLParser.SaveformatContext,i)


        def getRuleIndex(self):
            return GDLParser.RULE_graph

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGraph" ):
                listener.enterGraph(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGraph" ):
                listener.exitGraph(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGraph" ):
                return visitor.visitGraph(self)
            else:
                return visitor.visitChildren(self)




    def graph(self):

        localctx = GDLParser.GraphContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_graph)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.match(GDLParser.T__0)
            self.state = 56
            self.match(GDLParser.T__1)
            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << GDLParser.T__3) | (1 << GDLParser.T__12) | (1 << GDLParser.T__15) | (1 << GDLParser.T__16))) != 0):
                self.state = 61
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [GDLParser.T__15]:
                    self.state = 57
                    self.graphtitle()
                    pass
                elif token in [GDLParser.T__3]:
                    self.state = 58
                    self.layout()
                    pass
                elif token in [GDLParser.T__16]:
                    self.state = 59
                    self.background()
                    pass
                elif token in [GDLParser.T__12]:
                    self.state = 60
                    self.saveformat()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 65
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 66
            self.content()
            self.state = 67
            self.match(GDLParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LayoutContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return GDLParser.RULE_layout

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLayout" ):
                listener.enterLayout(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLayout" ):
                listener.exitLayout(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLayout" ):
                return visitor.visitLayout(self)
            else:
                return visitor.visitChildren(self)




    def layout(self):

        localctx = GDLParser.LayoutContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_layout)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(GDLParser.T__3)
            self.state = 70
            self.match(GDLParser.T__4)
            self.state = 71
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << GDLParser.T__5) | (1 << GDLParser.T__6) | (1 << GDLParser.T__7) | (1 << GDLParser.T__8) | (1 << GDLParser.T__9) | (1 << GDLParser.T__10))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 72
            self.match(GDLParser.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SaveformatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return GDLParser.RULE_saveformat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSaveformat" ):
                listener.enterSaveformat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSaveformat" ):
                listener.exitSaveformat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSaveformat" ):
                return visitor.visitSaveformat(self)
            else:
                return visitor.visitChildren(self)




    def saveformat(self):

        localctx = GDLParser.SaveformatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_saveformat)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(GDLParser.T__12)
            self.state = 75
            self.match(GDLParser.T__4)
            self.state = 76
            _la = self._input.LA(1)
            if not(_la==GDLParser.T__13 or _la==GDLParser.T__14):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 77
            self.match(GDLParser.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GraphtitleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TEXT(self):
            return self.getToken(GDLParser.TEXT, 0)

        def EXTENDETTEXT(self):
            return self.getToken(GDLParser.EXTENDETTEXT, 0)

        def getRuleIndex(self):
            return GDLParser.RULE_graphtitle

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGraphtitle" ):
                listener.enterGraphtitle(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGraphtitle" ):
                listener.exitGraphtitle(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGraphtitle" ):
                return visitor.visitGraphtitle(self)
            else:
                return visitor.visitChildren(self)




    def graphtitle(self):

        localctx = GDLParser.GraphtitleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_graphtitle)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(GDLParser.T__15)
            self.state = 80
            self.match(GDLParser.T__4)
            self.state = 81
            _la = self._input.LA(1)
            if not(_la==GDLParser.TEXT or _la==GDLParser.EXTENDETTEXT):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 82
            self.match(GDLParser.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BackgroundContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def clr(self):
            return self.getTypedRuleContext(GDLParser.ClrContext,0)


        def getRuleIndex(self):
            return GDLParser.RULE_background

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBackground" ):
                listener.enterBackground(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBackground" ):
                listener.exitBackground(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBackground" ):
                return visitor.visitBackground(self)
            else:
                return visitor.visitChildren(self)




    def background(self):

        localctx = GDLParser.BackgroundContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_background)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(GDLParser.T__16)
            self.state = 85
            self.match(GDLParser.T__4)
            self.state = 86
            self.clr()
            self.state = 87
            self.match(GDLParser.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ContentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def edge(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GDLParser.EdgeContext)
            else:
                return self.getTypedRuleContext(GDLParser.EdgeContext,i)


        def vertex(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GDLParser.VertexContext)
            else:
                return self.getTypedRuleContext(GDLParser.VertexContext,i)


        def getRuleIndex(self):
            return GDLParser.RULE_content

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterContent" ):
                listener.enterContent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitContent" ):
                listener.exitContent(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitContent" ):
                return visitor.visitContent(self)
            else:
                return visitor.visitChildren(self)




    def content(self):

        localctx = GDLParser.ContentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_content)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 91
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                if la_ == 1:
                    self.state = 89
                    self.edge()
                    pass

                elif la_ == 2:
                    self.state = 90
                    self.vertex()
                    pass


                self.state = 93 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==GDLParser.TEXT):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EdgeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vertex(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GDLParser.VertexContext)
            else:
                return self.getTypedRuleContext(GDLParser.VertexContext,i)


        def attitude(self):
            return self.getTypedRuleContext(GDLParser.AttitudeContext,0)


        def edgeopt(self):
            return self.getTypedRuleContext(GDLParser.EdgeoptContext,0)


        def value(self):
            return self.getTypedRuleContext(GDLParser.ValueContext,0)


        def getRuleIndex(self):
            return GDLParser.RULE_edge

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEdge" ):
                listener.enterEdge(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEdge" ):
                listener.exitEdge(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEdge" ):
                return visitor.visitEdge(self)
            else:
                return visitor.visitChildren(self)




    def edge(self):

        localctx = GDLParser.EdgeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_edge)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.vertex()
            self.state = 96
            self.attitude()
            self.state = 97
            self.vertex()
            self.state = 114
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==GDLParser.T__4:
                    self.state = 98
                    self.match(GDLParser.T__4)
                    self.state = 99
                    self.edgeopt()


                self.state = 104
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==GDLParser.T__17:
                    self.state = 102
                    self.match(GDLParser.T__17)
                    self.state = 103
                    self.value()


                pass

            elif la_ == 2:
                self.state = 108
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==GDLParser.T__17:
                    self.state = 106
                    self.match(GDLParser.T__17)
                    self.state = 107
                    self.value()


                self.state = 112
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==GDLParser.T__4:
                    self.state = 110
                    self.match(GDLParser.T__4)
                    self.state = 111
                    self.edgeopt()


                pass


            self.state = 116
            self.match(GDLParser.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EdgeoptContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def edgeoptparams(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GDLParser.EdgeoptparamsContext)
            else:
                return self.getTypedRuleContext(GDLParser.EdgeoptparamsContext,i)


        def getRuleIndex(self):
            return GDLParser.RULE_edgeopt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEdgeopt" ):
                listener.enterEdgeopt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEdgeopt" ):
                listener.exitEdgeopt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEdgeopt" ):
                return visitor.visitEdgeopt(self)
            else:
                return visitor.visitChildren(self)




    def edgeopt(self):

        localctx = GDLParser.EdgeoptContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_edgeopt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(GDLParser.T__18)
            self.state = 120 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 119
                self.edgeoptparams()
                self.state = 122 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << GDLParser.T__37) | (1 << GDLParser.T__38) | (1 << GDLParser.T__39) | (1 << GDLParser.T__49) | (1 << GDLParser.T__50) | (1 << GDLParser.T__52))) != 0)):
                    break

            self.state = 124
            self.match(GDLParser.T__19)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EdgeoptparamsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fontclr(self):
            return self.getTypedRuleContext(GDLParser.FontclrContext,0)


        def placement(self):
            return self.getTypedRuleContext(GDLParser.PlacementContext,0)


        def fontsize(self):
            return self.getTypedRuleContext(GDLParser.FontsizeContext,0)


        def font(self):
            return self.getTypedRuleContext(GDLParser.FontContext,0)


        def edgeclr(self):
            return self.getTypedRuleContext(GDLParser.EdgeclrContext,0)


        def edgethickness(self):
            return self.getTypedRuleContext(GDLParser.EdgethicknessContext,0)


        def getRuleIndex(self):
            return GDLParser.RULE_edgeoptparams

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEdgeoptparams" ):
                listener.enterEdgeoptparams(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEdgeoptparams" ):
                listener.exitEdgeoptparams(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEdgeoptparams" ):
                return visitor.visitEdgeoptparams(self)
            else:
                return visitor.visitChildren(self)




    def edgeoptparams(self):

        localctx = GDLParser.EdgeoptparamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_edgeoptparams)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [GDLParser.T__38]:
                self.state = 126
                self.fontclr()
                pass
            elif token in [GDLParser.T__39]:
                self.state = 127
                self.placement()
                pass
            elif token in [GDLParser.T__50]:
                self.state = 128
                self.fontsize()
                pass
            elif token in [GDLParser.T__52]:
                self.state = 129
                self.font()
                pass
            elif token in [GDLParser.T__37]:
                self.state = 130
                self.edgeclr()
                pass
            elif token in [GDLParser.T__49]:
                self.state = 131
                self.edgethickness()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==GDLParser.T__20:
                self.state = 134
                self.match(GDLParser.T__20)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VertexContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TEXT(self):
            return self.getToken(GDLParser.TEXT, 0)

        def vertexopt(self):
            return self.getTypedRuleContext(GDLParser.VertexoptContext,0)


        def value(self):
            return self.getTypedRuleContext(GDLParser.ValueContext,0)


        def getRuleIndex(self):
            return GDLParser.RULE_vertex

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVertex" ):
                listener.enterVertex(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVertex" ):
                listener.exitVertex(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVertex" ):
                return visitor.visitVertex(self)
            else:
                return visitor.visitChildren(self)




    def vertex(self):

        localctx = GDLParser.VertexContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_vertex)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.match(GDLParser.TEXT)
            self.state = 143
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==GDLParser.T__21:
                self.state = 138
                self.match(GDLParser.T__21)
                self.state = 140
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==GDLParser.INTEGER or _la==GDLParser.TEXT:
                    self.state = 139
                    self.value()


                self.state = 142
                self.match(GDLParser.T__22)


            self.state = 146
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==GDLParser.T__18:
                self.state = 145
                self.vertexopt()


            self.state = 149
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,16,self._ctx)
            if la_ == 1:
                self.state = 148
                self.match(GDLParser.T__11)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(GDLParser.INTEGER, 0)

        def TEXT(self):
            return self.getToken(GDLParser.TEXT, 0)

        def getRuleIndex(self):
            return GDLParser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValue" ):
                return visitor.visitValue(self)
            else:
                return visitor.visitChildren(self)




    def value(self):

        localctx = GDLParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_value)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            _la = self._input.LA(1)
            if not(_la==GDLParser.INTEGER or _la==GDLParser.TEXT):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttitudeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return GDLParser.RULE_attitude

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttitude" ):
                listener.enterAttitude(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttitude" ):
                listener.exitAttitude(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttitude" ):
                return visitor.visitAttitude(self)
            else:
                return visitor.visitChildren(self)




    def attitude(self):

        localctx = GDLParser.AttitudeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_attitude)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << GDLParser.T__23) | (1 << GDLParser.T__24) | (1 << GDLParser.T__25))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
